fix(#41) : checkStyle 적용